Fix button spacing

--- a/app/assets/stylesheets/layouts/_questionnaire_step_1.scss
+++ b/app/assets/stylesheets/layouts/_questionnaire_step_1.scss
@@ -19,6 +19,10 @@
   }
 }
 
+.l-questionnaire__button {
+  margin-top: $baseline-unit*4;
+}
+
 .l-questionnaire__two-cols {
   @include respond-to($mq-m) {
     float: left;
